Markdown support w/ Tailwind styling

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "namesgenerator": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.16.0",
+    "remark-gfm": "^3.0.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
