--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "remark-gfm": "^3.0.1",
     "sort-by": "^1.2.0"
