--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "namesgenerator": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-btn": "^1.4.0",
     "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
