Add create timestamp to cards

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "init": "npm install",
     "dev": "vite",
+    "supabase": "npx supabase start",
+    "supabasereset": "npx supabase db reset",
+    "supabasefn": "npx supabase functions serve --env-file ./supabase/.env.local",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
