--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -40,6 +40,7 @@ max_client_conn = 100
 enabled = true
 # Bind realtime via either IPv4 or IPv6. (default: IPv6)
 # ip_version = "IPv6"
+ip_version = "IPv4"
 
 [studio]
 enabled = true
