--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,59 +1,51 @@
-# Simple workflow for deploying static content to GitHub Pages
+# .github/workflows/pages.yml
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: ["master"]          # change to "main" if that’s your default
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{ steps.deploy.outputs.page_url }}
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      # Build
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+
+      # ↘ Build -------------------------------------------------------------
+      - uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install Packages
-        run: npm install
-      - name: Build page
-        run: CI=false npm run build
+          node-version: 20           # current LTS
+          cache: npm                 # speed up installs
+
+      - run: npm ci                  # deterministic install
+
+      - name: Build site
+        run: |
+          CI=false npm run build
         env:
-          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_URL:  ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
-      # result: build/
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+
+      # ↘ Publish -----------------------------------------------------------
+      - uses: actions/configure-pages@v4
+
+      - uses: actions/upload-pages-artifact@v2
         with:
-          # Upload build path
-          path: './dist'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+          path: dist                 # <- vite’s default output
+
+      - id: deploy
+        uses: actions/deploy-pages@v3
