--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "match-sorter": "^6.3.1",
     "namesgenerator": "^0.0.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-github-btn": "^1.4.0",
     "react-markdown": "^8.0.7",
