--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "supabasereset": "npx supabase db reset",
     "supabasefn": "npx supabase functions serve --env-file ./supabase/env.local.dist",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
